Se termina de maquetar el html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="idcontenedor">
+            <h1>Mis notas</h1>
+            <div class="cotenedor">
+                <textarea class="texto" id="texto">
+    
+                </textarea>
+            </div>
+            <button class="boton" id="boton">Agregar</button>
+        </div>
+        <!-- Notas -->
+        <div class="notas" id="notas">
+
+        </div>
+    </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
